--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+
+<body>
+		
 <div id="top-bar">
 			<nav id="nav_bar">
 
@@ -5,15 +12,15 @@
 
 					<li role="presentation"><span id="home-link">
 											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/browser-icon.png" height="36" width="36">
-										</span><a href="#">HOME</a>
+										</span><a href="/home">HOME</a>
 									</li>
 
-				  <li role="presentation" class="active"><span id="teachers-link">
+				  <li role="presentation"><span id="teachers-link">
 											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36">
 										</span><a href="/teachers">TEACHERS</a>
 									</li>
 
-				  <li role="presentation"><span id="student-link">
+				  <li role="presentation" class="active"><span id="student-link">
 										<img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="36" width="36"> 
 									</span><a href="/students">STUDENTS</a>
 								</li>
@@ -75,6 +82,9 @@
 	<% end %> 
 	</p>
 </div>
+
+</body>
+</html>
 
 
 
