--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -2,59 +2,10 @@
 <html>
 <head>
 </head>
-		<div id="top-bar">
-			<nav id="nav_bar">
-
-				<ul class="nav nav-pills">
-
-				<li role="presentation" class="active"><span id="home-link">
-											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/browser-icon.png" height="36" width="36">
-										</span><a href="#">HOME</a>
-									</li>
-
-				  <li role="presentation" <span id="teachers-link">
-											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36">
-										</span><a href="/teachers">TEACHERS</a>
-									</li>
-
-				  <li role="presentation"><span id="student-link">
-										<img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="36" width="36"> 
-									</span><a href="/students">STUDENTS</a>
-								</li>
-			
-				  <li role="presentation"><span id="tools-link">
-										<img id="tools" src="http://icons.iconarchive.
-										com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
-									</span><a href="/tools">TOOLS</a>
-								</li>
-									
-
-				   <li role="presentation"><span id="games-link">
-										<img id="games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="36" width="36">
-								</span><a href="/games">GAMES</a>
-							</li>
-				    <li role="presentation"><span id="media-link">
-										<img id="media" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="36" width="36">
-								</span><a href="/media">MEDIA</a>
-							</li>
-
-				     <li role="presentation"><span id="posts-link">
-										<img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36">
-								</span><a href="/posts">POSTS</a>
-								</li>
-
-				      <li role="presentation"><span id="contact-link">
-										<img id= "contact" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="36" width="36">
-								</span><a href="contact">CONTACT</a>
-								</li>
-				</ul>
-			</div>
-	</nav>
-</div>
 
 <body>
 			
-		<h1><b> TEFL Platform for teachers and students </b></h1>
+		<h1 id="platform-name"><b> TEFL Platform for teachers and students </b></h1>
 
 		<div id="motto"><p> Educative platform fostering English learning. </p>
 		</div>
@@ -63,62 +14,62 @@
 	<h3 id="welcome">Welcome back!</h3>
 
 <article>
-	<div id="home-header">
-	<h3 id="latest_posts"> Latest posts </h3>
-	</div>
+	<span id="recent-posts-header">
+       <h3 id="post-title"> <img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36"> Recent Posts </h3>
+      </span>
 
-<div id="latest_posts">
-												<table>
-													<tbody>
-													<% @posts.each do |post| %> 
-															<tr>
-														    <td><b><%= post.name %></b> / <%= Time.now %></td><br>
-														  </tr>
-														  <tr>
-																<td><%= post.text %></td>
-																<td><button type='button' id='like-button'> Like </button></td>
-			                                    <td id="likes"></td><br>
-															</tr>	
-														</tbody>	
-																<% end %>
-												</table>
-										</div>
-											   <table id="post-comments-home">
+      <table> 
+        <div id="posts-content">
+        	 <% @posts.each do |post| %> 
+        	<tr>
+            <td><b><%= post.name %></b></td>
+          </tr>
+          <tr>
+            <td><%= post.title %></td> 
+          <tr>
+            <tr>
+                 <td><%= Time.now %></td>
+            </tr>
+          <tr>
+        		<td><%= post.text %></td>
+            <td><button type='button' id='like-button'> Like </button></td>
+                                      <td id="likes"></td>
+        	</tr>
+
+        	<% end %>
+        </div>
 										
-														<h4 id="welcome"> Share a comment </h4>
-										
-														  <tr>
-														    <td>
-														      <%= form_for :comment, url: comments_path(@comment), method: :patch do |f| %>
-														        <p>
-														          <%= f.label :title %><br>
-														          <%= f.text_field :title %>
-														        </p>
+        <table id="post-comments">
+        <tr>
+          <%= form_for :post, url: posts_path do |f| %>
 
-														        <p>
-														          <%= f.label :name %><br>
-														          <%= f.text_field :name %>
-														        </p>
+            <th> Post your ideas!</th> 
+            
+            <tr>
+              <td>
+                 <p>
+                    <%= f.label :title %><br>
+                    <%= f.text_field :title %>
+                  </p>
 
-														        <p>
-														          <%= f.label :text %><br>
-														          <%= f.text_area :text %>
-														        </p>
-
-														        <p>
-														          <%= f.submit %>
-														        </p>
-														      <% end %>
-														      </td>
-														  </tr>
-														</table>
-
-														<tr>
-															<td>
-											
-												</td>
-														</tr>
-											</table><br>
+                  <p>
+                    <%= f.label :name %><br>
+                    <%= f.text_field :name %>
+                  </p>
+                 
+                  <p>
+                    <%= f.label :text %><br>
+                    <%= f.text_area :text %>
+                  </p>
+                 
+                  <p>
+                    <%= f.submit %>
+                  </p>
+              </td>
+            </tr>
+            <% end %>
+              <table>
+														
 									</div>
 					</article>
 	
