--- a/app/views/students/tools.html.erb
+++ b/app/views/students/tools.html.erb
@@ -1,75 +1,41 @@
-<div id="top-bar">
-      <nav id="nav_bar">
+<!DOCTYPE html>
+<html>
+<head>
+</head>
 
-        <ul class="nav nav-pills">
-          <li role="presentation" class="active"><span id="teachers-link">
-                      <img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36">
-                    </span><a href="/teachers">TEACHERS</a>
-                  </li>
+<body>
+  <h3 id="tools-title"> Tools </h3><br>   
 
-          <li role="presentation"><span id="student-link">
-                    <img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="36" width="36"> 
-                  </span><a href="/students">STUDENTS</a>
-                </li>
+  <hr>
+         <div id="duolingo_container">
+              <img id="duolingo-logo" src="http://icons.iconarchive.com/icons/martz90/hex/256/duolingo-icon.png" height="46" width="46">
+
+              <p><strong>Discover Duolingo, an amazing and interactive way of learning English.</strong></p><br>
+                  <ul>
+                      <li><a href="https://www.duolingo.com/o$o=deivyemcee@hotmail.com&s=TEFL%20Platform"><b>Join</b> our <b>Duolingo Dashboard!</b></a></li>
+
+                      <li><a href="/duolingo/dashboard">See your class progress at <b>Duolingo Dashboard</b></a></li>
+                   </ul>
+          </div>
       
-          <li role="presentation"><span id="tools-link">
-                    <img id="tools" src="http://icons.iconarchive.com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
-                  </span><a href="/tools">TOOLS</a>
-                </li>        
+      <div id="dropbox_container">
+              <img id="dropbox-logo" src="http://icons.iconarchive.com/icons/martz90/hex/256/dropbox-icon.png" height="46" width="46">
 
-           <li role="presentation"><span id="games-link">
-                    <img id="games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="36" width="36">
-                </span><a href="/games">GAMES</a>
-              </li>
-            <li role="presentation"><span id="media-link">
-                    <img id="media" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="36" width="36">
-                </span><a href="/media">MEDIA</a>
-              </li>
-
-             <li role="presentation"><span id="posts-link">
-                    <img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36">
-                </span><a href="/posts">POSTS</a>
-                </li>
-
-              <li role="presentation"><span id="contact-link">
-                    <img id= "contact" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="36" width="36">
-                </span><a href="contact">CONTACT</a>
-                </li>
-        </ul>
+              <p><strong>Browse our Dropbox, one of the best cloud servers to share our content.</strong></p><br>
+              <ul>
+                  <li><%= link_to 'Authenticate', controller: "dropbox", action: "auth_start" %></li>        
+                  <li><%= link_to 'Upload your file to dropbox', controller: "dropbox", action: "main" %></li>
+                  <li><a href="https://www.dropbox.com/sh/ow7ekrt4w32358u/AAB8doO49mCrb8vvFhX2IKoaa?dl=0">Browse the <b>TEFL folder</b> and <b>download</b> the files you need.</a></li>
+          </ul>
+          <script src="https://www.dropbox.com/static/api/2/dropins.js" type="text/javascript" id="dropboxjs" data-app-key="ps8sv6wjj5v125t"></script>
+          <br>
+          <p> We strongly recommend <b>'WE TEACH. WE LEARN'</b> as a guide to make your classes <b>interactive</b> and <b>learner-centered</b>.</p>
+          
+          <a href="https://www.dropbox.com/home/TEFL?preview=teachlearn.pdf" class="dropbox-saver">Save</a><br>
+          <br>
       </div>
-  </nav>
-</div>
-
-<h3 id="tools-title"> Tools </h3><br>   
-
-<hr>
-       <div id="duolingo_container">
-            <img id="duolingo-logo" src="http://icons.iconarchive.com/icons/martz90/hex/256/duolingo-icon.png" height="46" width="46">
-
-            <p><strong>Discover Duolingo, an amazing and interactive way of learning English.</strong></p><br>
-                <ul>
-                    <li><a href="https://www.duolingo.com/o$o=deivyemcee@hotmail.com&s=TEFL%20Platform"><b>Join</b> our <b>Duolingo Dashboard!</b></a></li>
-
-                    <li><a href="/duolingo/dashboard">See your class progress at <b>Duolingo Dashboard</b></a></li>
-                 </ul>
-        </div>
-    
-    <div id="dropbox_container">
-            <img id="dropbox-logo" src="http://icons.iconarchive.com/icons/martz90/hex/256/dropbox-icon.png" height="46" width="46">
-
-            <p><strong>Browse our Dropbox, one of the best cloud servers to share our content.</strong></p><br>
-            <ul>
-                <li><%= link_to 'Authenticate', controller: "dropbox", action: "auth_start" %></li>        
-                <li><%= link_to 'Upload your file to dropbox', controller: "dropbox", action: "main" %></li>
-                <li><a href="https://www.dropbox.com/sh/ow7ekrt4w32358u/AAB8doO49mCrb8vvFhX2IKoaa?dl=0">Browse the <b>TEFL folder</b> and <b>download</b> the files you need.</a></li>
-        </ul>
-        <script src="https://www.dropbox.com/static/api/2/dropins.js" type="text/javascript" id="dropboxjs" data-app-key="ps8sv6wjj5v125t"></script>
-        <br>
-        <p> We strongly recommend <b>'WE TEACH. WE LEARN'</b> as a guide to make your classes <b>interactive</b> and <b>learner-centered</b>.</p>
-        
-        <a href="https://www.dropbox.com/home/TEFL?preview=teachlearn.pdf" class="dropbox-saver">Save</a><br>
-        <br>
-    </div>
+  </body>
+</html>
 
 
 
