--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,64 +1,16 @@
-<div id="top-bar">
-			<nav id="nav_bar">
 
-				<ul class="nav nav-pills">
-
-					<li role="presentation"><span id="home-link">
-											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/browser-icon.png" height="36" width="36">
-										</span><a href="#">HOME</a>
-									</li>
-
-				  <li role="presentation" class="active"><span id="teachers-link">
-											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36">
-										</span><a href="/teachers">TEACHERS</a>
-									</li>
-
-				  <li role="presentation"><span id="student-link">
-										<img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="36" width="36"> 
-									</span><a href="/students">STUDENTS</a>
-								</li>
-			
-				  <li role="presentation"><span id="tools-link">
-										<img id="tools" src="http://icons.iconarchive.
-										com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
-									</span><a href="/tools">TOOLS</a>
-								</li>
-									
-
-				   <li role="presentation"><span id="games-link">
-										<img id="games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="36" width="36">
-								</span><a href="/games">GAMES</a>
-							</li>
-				    <li role="presentation"><span id="media-link">
-										<img id="media" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="36" width="36">
-								</span><a href="/media">MEDIA</a>
-							</li>
-
-				     <li role="presentation"><span id="posts-link">
-										<img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36">
-								</span><a href="/posts">POSTS</a>
-								</li>
-
-				      <li role="presentation"><span id="contact-link">
-										<img id= "contact" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="36" width="36">
-								</span><a href="contact">CONTACT</a>
-								</li>
-				</ul>
-			</div>
-	</nav>
-</div>
 <div id="teachers-header">	
 	<h3 id="teachers-title"><img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="46" width="46">  Teachers' Index </h3>
 </div>
 
 <hr>
-<div id="home-link">
+<div id="home-link"><img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="36" width="36"> 
 	<%= link_to 'Class Interaction', controller: "tutors", action:"index" %> / 
-	<a href="/duolingo/dashboard">Duolingo Dashboard</a>
+	<a href="/duolingo/dashboard">Duolingo Dashboard</a><img id="tools" src="http://icons.iconarchive.com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
 </div>
 
 <hr>
-        <h3 id="teachers-title2">Give your best in the class!</h3>
+        <h3 id="teachers-title2">Training</h3>
     </header>
      
    <div id="issuu-reading" data-configid="3007336/13454019" style="width:525px; height:371px;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script> 
