--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -2,37 +2,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 html {
    height: 100%; 
 }
@@ -44,13 +13,12 @@ div#top-bar {
    width: 100%; 
    height: 80px;  
    background-color: #49CBD6;  
-   padding: 5px;
+   padding: 10px;
 }
 
 div#home-header { 
    width: 250px; 
-   margin-left: 170px;
-   margin-top: 50px; 
+   margin-top: 5%; 
    padding: 1px; 
    text-align: center; 
    background-color: #49CBD6;  
@@ -58,12 +26,23 @@ div#home-header {
    border-radius: 20px 20px 20px 20px; 
 }
 
-h1 {  
+span#log_container {
+ background-color: #49CBD6;
+ box-shadow: 0 0 1em black;
+ border-radius: 20px 20px 20px 20px;
+ padding: 10px;  
+}
+
+form{
+   align-content: center;
+}
+
+h1#platform-name {  
    text-align: center; 
-   margin-top: 10%; 
+   margin-top: 10%;
    margin-left: 10%; 
    margin-right: 10%;
-   padding:20px; 
+   padding:10px; 
    font-family: verdana; 
    font-size: 25px;
 } 
@@ -81,18 +60,21 @@ div#motto {
    font-size: 18px; 
 }
 
-button#like-button, a:hover {
+button#like-button {  
+   background-color: #49CBD6;
+   
+}
+
+a:hover {
     background-color: #49CBD6;
 } 
 
 h3#latest_post, h3#latest_feedback{
-
-   padding: 10px;   
+   padding: 10px;
 }
 
 table#post-comments-home {
-   margin-top: 10px; 
-   margin-left: 390px; 
+   margin-top: 10px;  
    background-color: #49CBD6;
    border-radius: 20px 20px 20px 20px; 
 }
@@ -101,7 +83,7 @@ body {
    font-family: verdana; 
    width: 1024;
    height: 600px; 
-   margin-top: 5%; 
+   margin-top: 10%; 
    margin-right: 10%; 
    margin-left: 10%; 
    margin-bottom: 10%; 
@@ -115,7 +97,7 @@ nav > img{
    margin-left: 30px; 
 }
 
-#nav_bar > span {
+span > a {
    font-style: georgia; 
    font-size: 14px;
    text-align: auto;  
@@ -130,7 +112,7 @@ nav > img{
 
 #like-button {
    padding: 4px; 
-   margin-left: 100px; 
+   margin-left: 50px; 
    box-shadow: 0 0 1em black;
    border-radius: 20px 20px 20px 20px;
    margin: 4px;
@@ -140,6 +122,7 @@ nav > img{
 /*Posts, comments & feedback CSS*/
 
 table#posts {
+   
    margin-right: 20px;
    margin-left: 20px;
    border-radius: 20px 30px 30px 20px;
@@ -285,14 +268,6 @@ h3#teachers-title {
 }
 
 div#tutors-header {
-   text-align: center;
-   position: fixed; 
-   top: 0; 
-   left: 0; 
-   width: 100%;
-   background-color: #49CBD6;  
-   box-shadow: 0 0 1em black;
-   border-radius: 20px 20px 20px 20px; 
 }
 
 h3#title-tutor {
