--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
-<table>
-  <tr>
-    <td>
+
+<h2> Posts </h2>
+ 
 		 <p>
 		  <strong>Title:</strong>
 		  <%= @post.title %>
@@ -15,9 +15,37 @@
 		  <strong>Text:</strong>
 		  <%= @post.text %>
 		</p>
-	</td>
-  </tr>
-</table>
+
+<h2> Comments </h2>
+
+<% @post.comments.each do |comment| %> 
+<p> 
+	<strong>Name:</strong>
+	<%= comment.name %>
+</p>
+
+<p> 
+	<strong>Text:</strong>
+	<%= comment.text %>
+</p>
+
+<% end %>
+
+ <h2> Add a comment: </h2> 
+
+ <%= form_for([@post, @post.comments.build]) do |f| %>
+  <p>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
+  </p>
+  <p>
+    <%= f.label :text %><br>
+    <%= f.text_area :text %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %> 
 
 <hr> 
 
