--- a/app/views/students/media.html.erb
+++ b/app/views/students/media.html.erb
@@ -9,11 +9,12 @@
 
 	<hr>
 
+	<h4 id="media-subheader">Improve your listening comprehension with our karaoke songs, podcasts and videos </h4><br> 
+
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
 				<table id="spotify-table">
-					<th>Listen to our Karaoke Songs! </th> 
 					<tr>
 						<td>
 							<div id="spotify_container">
@@ -24,24 +25,23 @@
 				</table>
 			</div>
 
+		<div class="row">
 			<div class="col-md-6">
 				<div class="embed-responsive embed-responsive-16by9">
-				<table id="video-table">
-					<th> Latest videos </th> 
-					<tr>
-						<td>
-							<iframe class="embed-responsive-item" width="560" height="315" style="border: 1px solid #49CBD6" src="https://www.youtube.com/embed/ZbNKTOXUVow?list=PL5146C9A4FD908B6D" frameborder="0" allowfullscreen></iframe>
-						</td>
-					</tr>
-				</table>
+					<table id="video-table">
+						<tr>
+							<td>
+								<iframe class="embed-responsive-item" width="600" height="300" style="border: 1px solid #49CBD6" src="https://www.youtube.com/embed/ZbNKTOXUVow?list=PL5146C9A4FD908B6D" frameborder="0" allowfullscreen></iframe>
+							</td>
+						</tr>
+					</table>
 				</div>
-			</div>
+			</div>	
 		</div>
-		
-		<div class="row">
-				<div class="col-md-6">
+	</div>
+
+			<div class="col-md-6">
 					<table id="ivoox-table">
-					<th> Latest podcasts </th> 
 					<tr>
 						<td>
 							<iframe src="http://www.ivoox.com/player_es_podcast_17685_1.html" width="100%" style="border: 1px solid #49CBD6" height="440" frameborder="0" allowfullscreen="0" scrolling="no" ></iframe>
@@ -50,6 +50,10 @@
 				</table>
 			</div>
 		</div>
+	</div>
+
+	
+		
 	</body>
 </html>
 
