--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,6 +11,9 @@
 
       <hr>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
       <table> 
         <div id="posts-content">
         	 <% @posts.each do |post| %> 
@@ -18,20 +21,26 @@
             <td><b><%= post.name %></b></td>
           </tr>
           <tr>
-            <td><%= post.title %></td> 
-          <tr>
-            <tr>
-                 <td><%= Time.now %></td>
-            </tr>
+            <td><%= post.title %></td>
+          </tr>
           <tr>
         		<td><%= post.text %></td>
+          </tr>
+             <tr>
+             <td>Posted on <%= post.created_at %></td>
+          </tr>
+          <tr>  
             <td><button type='button' id='like-button'> Like </button></td>
                                       <td id="likes"></td>
         	</tr>
 
         	<% end %>
         </div>
+      </div>
+</div>
 
+<div class="row">
+  <div class="col-md-6">
         <table id="post-comments">
         <tr>
           <%= form_for :post, url: posts_path do |f| %>
@@ -64,6 +73,10 @@
           </div>
           </div>
           <% end %>
+        </div>
+       </div> 
+      </div>
+  </div>
 </div>
 
     <script type="text/javascript">
