--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -4,41 +4,47 @@
 </head>
 
 <body>
-			
-		<h1 id="platform-name"><b> TEFL Platform for teachers and students </b></h1>
+  <div class="page-header">
+  <h1>TEFL Platform for teachers and students<br>
+    <small> Educative platform fostering English learning. </small></h1>
+</div>
 
-		<div id="motto"><p> Educative platform fostering English learning. </p>
-		</div>
-
-	<hr>
-	<h3 id="welcome">Welcome back!</h3>
+	<h3>Welcome back!</h3>
 
 <article>
-	<span id="recent-posts-header">
-       <h3 id="post-title"> <img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36"> Recent Posts </h3>
+    	<span id="recent-posts-header">
+           <h3> <img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36"> Recent Posts </h3>
       </span>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
       <table> 
         <div id="posts-content">
-        	 <% @posts.each do |post| %> 
-        	<tr>
+           <% @posts.each do |post| %> 
+          <tr>
             <td><b><%= post.name %></b></td>
           </tr>
           <tr>
-            <td><%= post.title %></td> 
+            <td><%= post.title %></td>
+          </tr>
           <tr>
-            <tr>
-                 <td><%= Time.now %></td>
-            </tr>
-          <tr>
-        		<td><%= post.text %></td>
+            <td><%= post.text %></td>
+          </tr>
+             <tr>
+             <td>Posted on <%= post.created_at %></td>
+          </tr>
+          <tr>  
             <td><button type='button' id='like-button'> Like </button></td>
                                       <td id="likes"></td>
-        	</tr>
-
-        	<% end %>
+          </tr>
+               <% end %>
+          </table>
         </div>
-										
+      </div>
+
+  <div class="row">
+    <div class="col-md-6">
         <table id="post-comments">
         <tr>
           <%= form_for :post, url: posts_path do |f| %>
@@ -67,11 +73,12 @@
                   </p>
               </td>
             </tr>
-            <% end %>
-              <table>
-														
-									</div>
-					</article>
+
+             <% end %>
+              <table>    
+          </div>
+      </div>       
+</div>
 	
 	 <script type="text/javascript">
 
@@ -80,9 +87,6 @@
         });
     </script>
 </body>
-<footer>
-		David Navarro, 2015
-</footer>
 </html>
 
 
