--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -4,57 +4,7 @@
 </head>
 
 <body>
-		
-<div id="top-bar">
-			<nav id="nav_bar">
-
-				<ul class="nav nav-pills">
-
-					<li role="presentation"><span id="home-link">
-											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/browser-icon.png" height="36" width="36">
-										</span><a href="/home">HOME</a>
-									</li>
-
-				  <li role="presentation"><span id="teachers-link">
-											<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36">
-										</span><a href="/teachers">TEACHERS</a>
-									</li>
-
-				  <li role="presentation" class="active"><span id="student-link">
-										<img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="36" width="36"> 
-									</span><a href="/students">STUDENTS</a>
-								</li>
-			
-				  <li role="presentation"><span id="tools-link">
-										<img id="tools" src="http://icons.iconarchive.
-										com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
-									</span><a href="/tools">TOOLS</a>
-								</li>
-									
-
-				   <li role="presentation"><span id="games-link">
-										<img id="games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="36" width="36">
-								</span><a href="/games">GAMES</a>
-							</li>
-				    <li role="presentation"><span id="media-link">
-										<img id="media" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="36" width="36">
-								</span><a href="/media">MEDIA</a>
-							</li>
-
-				     <li role="presentation"><span id="posts-link">
-										<img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36">
-								</span><a href="/posts">POSTS</a>
-								</li>
-
-				      <li role="presentation"><span id="contact-link">
-										<img id= "contact" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="36" width="36">
-								</span><a href="contact">CONTACT</a>
-								</li>
-				</ul>
-			</div>
-	</nav>
-</div>
-
+	
 <span id="student-header">
 	<h1 id="student-title"><img id="student-header" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="46" width="46"> Your Class </h1>
 </span>
@@ -66,16 +16,17 @@
 		<% @students.each do |student| %>
 	<table>
 		<tr>
+			<th><b><%= student.name %></b></th>
 			<td><img src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="46" width="46"></td>
-			<td><b><%= student.name %></b></td>
+			
 			<td>Email: <%= student.email %></td>
 			<td>Age: <%= student.age %></td>
 			<td>Level: <%= student.level %></td>
 		<!--
 			<td>Progress: <%= student.progress %></td>
 			<td>Score: <%= student.score %></td>
-		-->
 			<td>Comment: <%= student.comment %></td>
+		-->
 		</tr>
 	</table><br>
 
