--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
-<div id="user-form">
-  <%= form_for(@user) do |f| %>
+
+  <%= form_for @user do |f| %>
     <% if @user.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -11,12 +11,7 @@
         </ul>
       </div>
     <% end %>
-
-     <div class="field">
-      <%= f.label :username %><br>
-      <%= f.text_field :username %>
-    </div>
-
+    
     <div class="field">
       <%= f.label :email %><br>
       <%= f.text_field :email %>
@@ -33,4 +28,3 @@
       <%= f.submit %>
     </div>
   <% end %>
-</div>
