--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -19,9 +19,9 @@
 			<th><b><%= student.name %></b></th>
 			<td><img src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="46" width="46"></td>
 			
-			<td>Email: <%= student.email %></td>
-			<td>Age: <%= student.age %></td>
-			<td>Level: <%= student.level %></td>
+			<td><b>Email:</b> <%= student.email %></td>
+			<td><b>Age:</b> <%= student.age %></td>
+			<td><b>Level:</b> <%= student.level %></td>
 		<!--
 			<td>Progress: <%= student.progress %></td>
 			<td>Score: <%= student.score %></td>
