--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -4,16 +4,16 @@
 </head>
 
 <body>
-  <div class="page-header">
-  <h1>TEFL Platform for teachers and students<br>
-    <small> Educative platform fostering English learning. </small></h1>
-</div>
 
-	<h3>Welcome back!</h3>
+<div class ="container">
+      <div class="page-header">
+        <h1>TEFL Platform <br>
+            <small> Educative platform for teachers and students fostering English learning. </small></h1>
+        </div>
 
 <article>
     	<span id="recent-posts-header">
-           <h3> <img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36"> Recent Posts </h3>
+           <h3> Recent Posts </h3>
       </span>
 
 <div class="container">
@@ -27,13 +27,15 @@
           </tr>
           <tr>
             <td><%= post.title %></td>
+          <tr>
+             <td>Posted on <%= post.created_at.mday %>/<%= post.created_at.month %>/<%= post.created_at.year %>
+            </td>
+
+          </tr>
           </tr>
           <tr>
             <td><%= post.text %></td>
-          </tr>
-             <tr>
-             <td>Posted on <%= post.created_at %></td>
-          </tr>
+          </tr>  
           <tr>  
             <td><button type='button' id='like-button'> Like </button></td>
                                       <td id="likes"></td>
@@ -43,8 +45,10 @@
         </div>
       </div>
 
-  <div class="row">
-    <div class="col-md-6">
+    <ul class="pager">
+      <li><a href="/posts">Show all</a></li>
+    </ul>
+
         <table id="post-comments">
         <tr>
           <%= form_for :post, url: posts_path do |f| %>
@@ -76,8 +80,6 @@
 
              <% end %>
               <table>    
-          </div>
-      </div>       
 </div>
 	
 	 <script type="text/javascript">
