--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -5,7 +5,16 @@ html {
 }
 
 img#tefl-logo {
-   margin-top: -18px; 
+   color: white; 
+   font-size: 30px; 
+   font-family: Oxygen; 
+   margin-top: -8px; 
+}
+
+a.btn.btn-navbar {
+   font-size: 20px; 
+   font-family: Oxygen, sans-serif; 
+   margin-top: -10px; 
 }
 
 nav.navbar {
@@ -13,56 +22,87 @@ nav.navbar {
    top: 0; 
    left: 0; 
    width: 100%; 
-   height: 70px;  
+   height: 60px;  
    background-color: #49CBD6;  
    padding: 10px;
 }
 
 nav#log_container {
-   margin-left: 100px; 
+  font-family: Oxygen; 
+  margin-left: 30px; 
+  padding-top: 20px; 
+  padding-bottom: 10px; 
+}
+
+h3.session-title {
+   color: white; 
 }
 
 form{
-   align-content: center;
+  position: center; 
+  width: 50%;
+  margin: 10px; 
+  padding: 20px; 
+  padding-top: 35px; 
+  text-align: center;
+  background-color: #49CBD6; 
+  box-shadow: 0 0 1em black;
+  border-radius: 20px 20px 20px 20px; 
+}
+
+img.img-responsive {
+   top: 0; 
+   left: 0; 
+   position: fixed; z-index: -1;
+   width: 200%;
+   height: 300px; 
+}
+
+.login-img {
+   top: 0; 
+   left: 0; 
+   right: 0; 
+   position: fixed; z-index: -1;
+   width: 100%;
+   height: 1000px; 
+   
 }
 
 h1#platform-name {  
    text-align: center; 
-   margin-top: 1%;
+   margin-top: -15%;
    margin-left: 10%; 
    margin-right: 10%;
    padding:10px; 
-   font-family: verdana; 
-   font-size: 25px;
+   font-family: Oxygen; 
+   font-size: 60px;
 } 
 
-#welcome {
-  padding-top: 10px;
-  padding-bottom: 10px; 
-}
-
-div#motto {
+p.motto {
    text-align: center; 
    margin-left: 10%; 
    margin-right: 10%; 
    padding-bottom: 10px; 
-   font-family: verdana; 
-   font-size: 18px; 
+   font-family: Oxygen; 
+   font-size: 25px; 
+   color: white; 
+}
+
+h3.recent-posts-header {
+   padding-top: 50px; 
 }
 
 button#like-button {  
    background-color: #49CBD6;
 }
 
-a:hover {
-    background-color: #49CBD6;
-} 
-
 h3#latest_post, h3#latest_feedback{
    padding: 10px;
 }
 
 table#post-comments {
+   text-align: center; 
+   width: 50%;
    margin-top: 10px;  
    background-color: #49CBD6;
     box-shadow: 0 0 1em black;
@@ -122,12 +162,17 @@ div#posts-content {
    margin: 10px;
 }
 
+ul.pager {
+   text-align: left; 
+}
+
 table#post-comments {
-  margin-left: 150px; 
+   width: 50%; 
+   margin-left: 150px; 
    margin-top: 50px; 
    color: black; 
    background-color: #49CBD6; 
-    border-radius: 20px 20px 20px 20px; 
+   border-radius: 20px 20px 20px 20px; 
 }
 
 div#comments-content {
@@ -136,7 +181,7 @@ div#comments-content {
 
 /* Headers & Titles */
 
-h1#students-wall, h3#matching-title, h1#student-title, h3#media-title, h3#post-title, h3#title-tutor, h3#teachers-title  {
+h1#students-wall, h3#matching-title, h1#student-title, h3#media-title, h3#post-title, h3#title-tutor, h2#teachers-title  {
    width: 50%; 
    text-align: center; 
    background-color: #49CBD6;  
@@ -213,15 +258,11 @@ h4#media-subheader {
 
 img#media-new {
    margin-top: -3px; 
-
 }
 
-table#video-table {
-   margin-left: -170px; 
-}
-
-table#ivoox-table {
-   margin-left: -17px;
+iframe {
+   position: relative; 
+   
 }
 
 /*Teacher & Tutor CSS*/ 
@@ -234,7 +275,9 @@ h3#teachers-title2 {
 }
 
 div#issuu-reading {
-   box-shadow: 0 0 1em black;
+   box-shadow: 0 0 2em black;
+   border-radius: 20px 20px 20px 20px; 
+   padding: 10px; 
    margin-left: 25%;
    margin-right: 25%;
    margin-top: 2%; 
@@ -251,6 +294,7 @@ span#contact-tutor-header {
 /*Tables style*/
 
 th {
+   text-align: center; 
    font-size: 14px; 
    padding: 30px;
 }
@@ -281,11 +325,6 @@ div#back_link {
     margin-left: 350px;
 }
 
-footer { 
-   text-align: center;
-   width: 100%; 
-   height: 40px;  
-   padding: 10px;
-   font-size: 14px; 
-   margin-top: 20px; 
+p.navbar-text {
+   text-align: center; 
 }
